...
                            )
                            Spacer(modifier = Modifier.width(12.dp))
                            Text(
                                navItems[pagerState.currentPage],
                                maxLines = 1,
                                overflow = TextOverflow.Ellipsis,
                                modifier = Modifier.testTag("top_app_bar_title")
                            )
                        }
                    },

                    scrollBehavior = scrollBehavior,
                )
...
fun GameCard(game: Game, onGameClicked: (Int) -> Unit) {
    Column(
        horizontalAlignment = Alignment.CenterHorizontally,
        modifier = Modifier
            .width(120.dp)
            .clickable { onGameClicked(game.id) }
            .testTag("game_card")
    ) {
        Box {
            Image(
                painter = rememberAsyncImagePainter(
                    model = game.background_image,
                    placeholder = painterResource(id = R.drawable.app_icn)
...
