...
            ),
            contentPadding = PaddingValues(0.dp),
            modifier = Modifier.size(48.dp)
        ) {
            Icon(
                imageVector = if (isFavorite) Icons.Filled.Favorite else Icons.Default.FavoriteBorder,
                contentDescription = if (isFavorite) "Remove from favorites" else "Add to favorites",
                tint = if (isFavorite) MaterialTheme.colorScheme.error else MaterialTheme.colorScheme.onSurface,
            )

        }
    }
}
...
            color = MaterialTheme.colorScheme.onSurface,
            fontSize = 20.sp,
            fontWeight = FontWeight.SemiBold,
            fontFamily = FontFamily.SansSerif,
            modifier = Modifier
                .padding(start = 12.dp, top = 16.dp, bottom = 12.dp)
                .testTag("about_this_game_title")
        )
        ExpandableText(text = description, color = MaterialTheme.colorScheme.onSurfaceVariant)
        GameScreenshots(screenshots = game.short_screenshots ?: emptyList())
        RelatedGames(
            viewModel = viewModel,
            game = game,
...
